--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ body{
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
+.hamburguer{
+
+    right: 100%;
+}
+
 .navbar{
 
     display: flex;
@@ -64,6 +69,7 @@ p{
 .col-2{
     flex-basis: 50%;
     min-width: 300px;
+    padding-left: 2rem;
 }
 .col-2 img{
     max-width: 100%;
@@ -204,13 +210,121 @@ p{
     margin-left: 25%;
     width: 50%;
     border-radius: 50%;
+    padding: 10%;
 }
 
+.brands{
+    margin: 3rem auto;
+}
+.brands .row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.brands .col-6{
+    width: 10rem;
+}
+.brands img{
+    width: 100%;
+    cursor: pointer;
+    filter: grayscale(100%);
+    transition: 0.5s;
+}
+.brands img:hover{
+    filter: grayscale(0);
+}
+.footer{
+
+    background: #000;
+    color: #555555;
+    font-size: 1rem;
+    padding: 60px 0 20px;
+    text-align: center;
+}
+.footer h3{
+
+    padding-bottom: 1.1rem;
+    color: #ff523b;
+}
+.footer ul li{
+
+    list-style: none;
+    padding: 0.2rem;
+    font-size: 1.2rem;
+}
+.small-container-copyright{
+    text-align: center;
+    padding: 10px;
+    color: #555555;
+}
+.footer-col-1, .footer-col-2, .footer-col-3{
+    flex-basis: 33%;
+}
+
+.img-appstore-googleplay{
+    transform: scale(0.5);
+    width: 320px;
+    align-items: center;
+}
+.img-appstore-googleplay img{
+    padding: 2px;
+    margin: 5px;
+}
+
+@media only screen and (max-width: 700px){
+
+    .hamburguer{
+
+        position: fixed;
+        height: 30px;
+        width: 30px;
+        top: 20px;
+        right: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        cursor: pointer;
+    }
+    
+    .hamburguer .line{
+    
+        width: 100%;
+        height: 5%;
+        box-shadow: 0.1rem 0.1rem 1px #000;
+    }
 
 
+    .sidebar{
 
+        position: fixed;
+        background: #c7b5b2;
+        width: 70%;
+        height: 100vh;
+        margin-top: 0;
+        padding-top: 0;
+        top: 100%;
+        transition: all 0.5s;
+    }
 
+    .sidebar .show_menu{
+        top: 100%;
 
+    }   
+
+    .sidebar .menu ul{
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        font-size: 2rem;
+        text-align: center;
+        padding-top: 4rem;
+    }
+
+    .sidebar .menu ul li{
+        padding-bottom: 3rem;
+    }
+
+}
 
 
 
